  (joy)

2003-07-04
- bios/bios.c: also initialize level int 0x11 to just RTE, not
  date_time (needed by Diablo-Emulator for  LM-laserprinter (MAD)

2003-07-06
- aes/gemsclib.c : Return value of sc_read() is now compatible to Atari GEM
  again and sc_clear() now clears all scrap files in the clipboard. (THH)

2003-07-12
- po/es.po: added Spanish translation of EmuTOS, created by Gabriel Huertas
  <gabrielhuertas@terra.es> (joy)

2003-07-13
- bios/clock.c: NVRAM RTC year offset now detected from RTC_TOS_VER (joy)
- include/config.h: RTC_TOS_VER documented but not defined by default (joy)
- Makefile: new target 'aranym' added - it defines all required features.
  The 'falcon' target was removed (I don't believe current EmuTOS would
  work on real Falcon) (joy)
- doc/todo.txt: removed a couple of entries that I believe were done (joy)
- bios/disk.c: added debug kprintf's to partition detection code (joy)

2003-07-21
- aes/gemstart.S: _dos_exec() - jsr _dsptch removed on THH suggestion.
  This fixes the EmuDesk Shutdown crash I was experiencing (joy)
- vdi/blit.c: implemented vrt_cpyfm, vro_cpyfm and bit_blt in C  (MAD)

2003-07-25
- aes/gemstart.S: _dos_exec() still having problem. Had to increase
  the stack offset from 0x40 to 0x50 (joy)

2003-07-27
- desk/* : Fixed some of the "Desktop 1.2" patches and added three new menu
  entries in the file menu that are needed to use this desktop mode. (THH)

2003-07-29
- vdi/blit.c: reactivated assembler implementation of vrt_cpyfm, 
              vro_cpyfm and bit_blt till C is bug free  (MAD)

2003-07-31
- doc/*: updated doc to clarify country-oriented misunderstandings (LVL)

2003-08-02
- po/fr.po: updated
- tools/bug.c Makefile: bug produces util/langs.c directly; bug no longer
  complains about unknown charsets. (LVL)

2003-08-11
- po/de.po: Added missing strings and adjusted some of the form_alert strings
  to the 40 characters per line limit. (THH)
- aes/gemrslib.c: rs_str() now uses gettext(), too. (THH)